# clc

./: CMakeLists.txt
docs/: readme.md
examples/: CMakeLists.txt
examples/hello/: CMakeLists.txt  main.cpp
examples/sys_info/: CMakeLists.txt  main.cpp
include/: clc_win.h  readme.md
include/clc/: app.h  message.h  sys.h  win.h
include/clc/utils/: string.h
lib/: readme.md
src/: CMakeLists.txt  app.cpp  win.cpp
src/include/utils/: string.h
src/message/: CMakeLists.txt  api.cpp  message_linux.hpp  message_mac.hpp  message_other.hpp  message_win.hpp
src/sys/: CMakeLists.txt  api.cpp  sys_linux.hpp  sys_mac.hpp  sys_other.hpp  sys_win.hpp
src/utils/: CMakeLists.txt  string.cpp
src/win/: CMakeLists.txt  api.cpp  win_linux.hpp  win_mac.hpp  win_other.hpp  win_win.hpp
